// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should render 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-sc-1i8sd1r-0 dSwlYC"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <textarea
        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="TextArea"
        style="height: 4px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render as disabled 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-sc-1i8sd1r-0 iJpvqJ"
    disabled=""
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <textarea
        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full resize-none text-theme-secondary-text"
        data-testid="TextArea"
        disabled=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render as invalid 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-sc-1i8sd1r-0 fJkkgN"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <textarea
        aria-invalid="true"
        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="TextArea"
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 absolute bottom-full right-0 mb-2 text-theme-danger-500"
    >
      <span
        data-testid="Input__error"
      >
        <div
          class="sc-bdvvtL qGXhc text-theme-danger-500"
          height="20"
          width="20"
        >
          <svg>
            circle-exclamation-mark.svg
          </svg>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
